Fix resume download z-index. Remove hover on mobile.

--- a/css/resume.css
+++ b/css/resume.css
@@ -13,6 +13,8 @@ h1
     width: 100%;
     text-align: center;
     float: left;
+    position: relative;
+    z-index: 100;
 }
 
 #pdf-img a
